repair stickiness of img on mobile

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -15,6 +15,7 @@ html {
     z-index: 1;
     padding-bottom: 0;
     top: 0;
+    position: relative !important;
 }
 
 .o-header__container{
